--- a/backend/package.json
+++ b/backend/package.json
@@ -14,24 +14,27 @@
   },
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
+    "@sendgrid/mail": "^8.1.4",
     "@sentry/node": "^10.26.0",
     "apollo-server-express": "^3.13.0",
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "bull": "^4.12.2",
+    "bullmq": "^5.34.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.1",
-    "express-rate-limit": "^8.2.1",
+    "express-rate-limit": "^7.5.1",
     "graphql": "^16.12.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.16.3",
+    "redis": "^4.7.0",
     "sanitize-html": "^2.17.0",
-    "sharp": "^0.34.5",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^13.0.0",
+    "uuid": "^11.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
